fase_5/tech_challenge/solidary-tech/eks/prometheus-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal-link
  namespace: solidary-tech
spec:
  type: ExternalName
  externalName: prometheus.monitoring.svc.cluster.local
