fase_5/tech_challenge/solidary-tech/eks/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidary-tools-ingress
  namespace: solidary-tech
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: a2f80b5e3fb5049d18d0cadfaff23054-21dab141f0b550e5.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-internal-link
                port:
                  number: 9090
