fase_5/tech_challenge/solidary-tech/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidary-tech-ingress
  namespace: solidary-tech
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "" 
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  ingressClassName: nginx
  rules:
    - host: a954c8dbb4a244d5dab197470da62ab3-3ee1847475830378.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /ngos
            pathType: Prefix
            backend:
              service:
                name: ngo-service
                port:
                  number: 8081
          - path: /donations
            pathType: Prefix
            backend:
              service:
                name: donation-service
                port:
                  number: 8082
          - path: /volunteers
            pathType: Prefix
            backend:
              service:
                name: volunteer-service
                port:
                  number: 8083
